--- a/proyecto-frontend/src/translations/es/index.json
+++ b/proyecto-frontend/src/translations/es/index.json
@@ -9,9 +9,9 @@
         "a5": "Soft Skills",
         "a6": "Contactar",
         "a7": "Idioma",
-        "a7_1": "CA",
-        "a7_2": "ES",
-        "a7_3": "EN"
+        "a7_1": "Català",
+        "a7_2": "Español",
+        "a7_3": "English"
     },
     "home": {
         "h1": "Èric Martínez",
