--- a/proyecto-frontend/src/translations/ca/index.json
+++ b/proyecto-frontend/src/translations/ca/index.json
@@ -8,10 +8,10 @@
         "a4_2": "Clustering",
         "a5": "Soft Skills",
         "a6": "Contactar",
-        "a7": "Idioma",
-        "a7_1": "CA",
-        "a7_2": "ES",
-        "a7_3": "EN"
+        "a7": "Llengua",
+        "a7_1": "Català",
+        "a7_2": "Español",
+        "a7_3": "English"
     },
     "home": {
         "h1": "Èric Martínez",
