--- a/proyecto-frontend/src/translations/es/index.json
+++ b/proyecto-frontend/src/translations/es/index.json
@@ -21,7 +21,7 @@
         "front": {
             "t1": "Graduado en Química",
             "t2": "Posgrado en Inteligencia de Negocio y Análisis de Datos",
-            "p1": "Apasionado de los datos, amante del queso y amigo de los perros. Junior Data Scientist, actualmente viviendo en La Garriga, Barcelona."
+            "p1": "Apasionado de los datos y amante del queso. Junior Data Scientist, actualmente viviendo en La Garriga, Barcelona."
         },
         "back": {
             "l1": "Grado de Química - Universitat de Barcelona (UB)",
