--- a/proyecto-frontend/src/translations/ca/index.json
+++ b/proyecto-frontend/src/translations/ca/index.json
@@ -20,25 +20,25 @@
     "about": {
         "front": {
             "t1": "Graduat en Química",
-            "t2": "Posgrau en Inteligencia de Negoci i Análisis de Dades",
-            "p1": "Apasionat de les dades, amant del formatge i amic dels gossos. Junior Data Scientist, actualment vivint a La Garriga, Barcelona."
+            "t2": "Postgrau en Intel·ligència de Negoci i Anàlisis de Dades",
+            "p1": "Apassionat de les dades i amant del formatge. Junior Data Scientist, actualment vivint a La Garriga, Barcelona."
         },
         "back": {
             "l1": "Grau de Química - Universitat de Barcelona (UB)",
-            "l2": "Posgrau en Inteligencia de Negoci i Análisis de Dades - Universitat Oberta de Catalunya (UOC)",
-            "l2_1": "Especializació en Analítica de Dades - 1er Semestre",
-            "l2_1_1": "Fundaments de Inteligencia de Negoci",
-            "l2_1_2": "Fundaments de Data Science",
-            "l2_1_3": "Fundaments del Big Data",
-            "l2_2": "Especializació de Gestió de Dades - 2nd Semestre",
+            "l2": "Postgrau en Intel·ligència de Negoci i Anàlisis de Dades - Universitat Oberta de Catalunya (UOC)",
+            "l2_1": "Especialització en Analítica de Dades - 1r Semestre",
+            "l2_1_1": "Fonaments d'Intel·ligència de Negoci",
+            "l2_1_2": "Fonaments de Data Science",
+            "l2_1_3": "Fonaments del Big Data",
+            "l2_2": "Especialització de Gestió de Dades - 2nd Semestre",
             "l2_2_1": "Bases de Dades Analítiques",
             "l2_2_2": "Bases de Dades NoSQL",
             "l2_2_3": "Data Governance"
         },
         "card": {
-            "l3": "Programa Formatiu de Competencies tecnológiques en Inteligencia Artificial & Machine Learning amb Python (+500 hores) - Fundació Esplai",
+            "l3": "Programa Formatiu de Competències tecnològiques en Intel·ligència Artificial & Machine Learning amb Python (+500 hores) - Fundació Esplai",
             "l3_1": "Introducció a la programació (HTML, CSS, JavaScript...)",
-            "l3_2": "Inteligencia Artificial & Machine Learning amb Python",
+            "l3_2": "Intel·ligència Artificial & Machine Learning amb Python",
             "email": "eric77711@gmail.com"
         }
     },
@@ -46,7 +46,7 @@
         "h1": "Hard Skills",
         "t1": "Explotació de Dades:",
         "t2": "Bases de Dades:",
-        "t3": "ETL i Gestió del Dades:",
+        "t3": "ETL i Gestió de les Dades:",
         "t4": "Frontend:",
         "t5": "Big Data, Cloud i GitHub:"
     },
@@ -59,17 +59,17 @@
     },
     "soft": {
         "h1": "Soft Skills",
-        "t1": "Autonomía, gestió del temps, tecnologies - UOC",
-        "p1_1": "La metodología de la UOC es basa en l'entrega de projectes cada X temps. Els projectes demanden temps i, per tant, certa organització per poder cumplir amb les dates d'entrega. A més a més, s'adquireixen coneixements sobre tecnologies molt variades.",
-        "p1_2": "En resum, al haver estat un any a la UOC, he adquirit certes habilitats, que encara que no son habilitats técniques, poden resultar de molta utilitat: organizació, gestió del temps, perseverancia, autonomía...",
-        "t2": "Metodología agile, Scrum i treball en equip - Bootcamp Fundació Esplai",
-        "p2": "El projecte final es fa en grup (3 persones), durant uns 20 dies, utilizant Scrum: scrum master, daily meeting... "
+        "t1": "Autonomia, gestió del temps, tecnologies - UOC",
+        "p1_1": "La metodologia de la UOC es basa en l'entrega de projectes cada X temps. Els projectes demanden temps i, per tant, certa organització per poder complir amb les dates d'entrega. A més a més, s'adquireixen coneixements sobre tecnologies molt variades.",
+        "p1_2": "En resum, a l'haver estat un any a la UOC, he adquirit certes habilitats, que encara que no són habilitats tècniques, poden resultar de molta utilitat: organització, gestió del temps, perseverança, autonomia...",
+        "t2": "Metodologia agile, Scrum i treball en equip - Bootcamp Fundació Esplai",
+        "p2": "El projecte final es fa en grup (3 persones), durant uns 20 dies, utilitzant Scrum: scrum master, daily meeting... "
     },
     "contact": {
         "h1": "Contactar",
         "i1": "Nom",
         "i2": "Email",
-        "i3": "Motiu",
+        "i3": "Assumpte",
         "i4": "Missatge",
         "btn": "Enviar"
     },
