img + proj_1_es

--- a/proyecto-frontend/src/translations/en/index.json
+++ b/proyecto-frontend/src/translations/en/index.json
@@ -53,7 +53,7 @@
     "projects": {
         "h1": "Projects",
         "t1": "Text Mining",
-        "p1": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, maxime!",
+        "p1": "Data Science, Machine Learning, RStudio, Text Mining, Topic Model, K-NN",
         "t2": "Clustering",
         "p2": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, maxime!"
     },
