--- a/proyecto-frontend/src/translations/ca/index.json
+++ b/proyecto-frontend/src/translations/ca/index.json
@@ -24,8 +24,8 @@
             "p1": "Apassionat de les dades i amant del formatge. Junior Data Scientist, actualment vivint a La Garriga, Barcelona."
         },
         "back": {
-            "l1": "Grau de Química - Universitat de Barcelona (UB)",
-            "l2": "Postgrau en Intel·ligència de Negoci i Anàlisis de Dades - Universitat Oberta de Catalunya (UOC)",
+            "l1": "Grau de Química - Universitat de Barcelona (UB) - Juliol de 2021",
+            "l2": "Postgrau en Intel·ligència de Negoci i Anàlisis de Dades - Universitat Oberta de Catalunya (UOC) - Juliol de 2023",
             "l2_1": "Especialització en Analítica de Dades - 1r Semestre",
             "l2_1_1": "Fonaments d'Intel·ligència de Negoci",
             "l2_1_2": "Fonaments de Data Science",
@@ -36,10 +36,10 @@
             "l2_2_3": "Data Governance"
         },
         "card": {
-            "l3": "Programa Formatiu de Competències tecnològiques en Intel·ligència Artificial & Machine Learning amb Python (+500 hores) - Fundació Esplai",
+            "l3": "Programa Formatiu de Competències tecnològiques en Intel·ligència Artificial & Machine Learning amb Python (+500 hores) - Fundació Esplai - Setembre de 2023",
             "l3_1": "Introducció a la programació (HTML, CSS, JavaScript...)",
             "l3_2": "Intel·ligència Artificial & Machine Learning amb Python",
-            "email": "eric77711@gmail.com"
+            "pdf": "Baixar PDF"
         }
     },
     "hard": {
