--- a/proyecto-frontend/src/translations/es/index.json
+++ b/proyecto-frontend/src/translations/es/index.json
@@ -24,8 +24,8 @@
             "p1": "Apasionado de los datos y amante del queso. Junior Data Scientist, actualmente viviendo en La Garriga, Barcelona."
         },
         "back": {
-            "l1": "Grado de Química - Universitat de Barcelona (UB)",
-            "l2": "Posgrado en Inteligencia de Negocio y Análisis de Datos - Universitat Oberta de Catalunya (UOC)",
+            "l1": "Grado de Química - Universitat de Barcelona (UB) - Julio de 2021",
+            "l2": "Posgrado en Inteligencia de Negocio y Análisis de Datos - Universitat Oberta de Catalunya (UOC) - Julio de 2023",
             "l2_1": "Especialización en Analítica de Datos - 1er Semestre",
             "l2_1_1": "Fundamentos de Inteligencia de Negocio",
             "l2_1_2": "Fundamentos de Data Science",
@@ -36,10 +36,10 @@
             "l2_2_3": "Data Governance"
         },
         "card": {
-            "l3": "Programa Formativo de Competencias tecnológicas en Inteligencia Artificial & Machine Learning con Python (+500 horas) - Fundació Esplai",
+            "l3": "Programa Formativo de Competencias tecnológicas en Inteligencia Artificial & Machine Learning con Python (+500 horas) - Fundació Esplai - Septiembre de 2023",
             "l3_1": "Introducción a la programación (HTML, CSS, JavaScript...)",
             "l3_2": "Inteligencia Artificial & Machine Learning con Python",
-            "email": "eric77711@gmail.com"
+            "pdf": "Descargar PDF"
         }
     },
     "hard": {
